--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=8887
+github.client.id=84b8821cfaabe9ed2111
+github.client.secret=6a9e7f38007822d7cab0d58d1359159e516fd3b3
+github.redirect.uri=http://localhost:8887/callback
